Image overflow fix

--- a/src/components/SmartInvoicePage/style.module.scss
+++ b/src/components/SmartInvoicePage/style.module.scss
@@ -413,6 +413,11 @@
             display: block;
         }
     }
+
+    .aiPropsImgWrapper img {
+        max-width: 100%;
+    }
+
 }
 
 
